--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "dotenv": "^16.0.0",
     "electron": "^17.1.0",
+    "electron-reloader": "^1.2.3",
     "path": "^0.12.7",
     "serialport": "^10.3.0"
+  },
+  "dependencies": {
+    "@serialport/parser-readline": "^10.3.0"
   }
 }
