--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serialport": "^10.3.0"
   },
   "dependencies": {
-    "@serialport/parser-readline": "^10.3.0"
+    "@serialport/parser-readline": "^10.3.0",
+    "arcade-prototype": "github:arcade-feu/arcade-prototype"
   }
 }
